.build/manifests/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spirit-in-physics
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  namespace: spirit-in-physics
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: grpc-service
---
apiVersion: v1
kind: Service
metadata:
  name: import-service
  namespace: spirit-in-physics
spec:
  ports:
  - name: http
    port: 8082
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: import-service
---
apiVersion: v1
kind: Service
metadata:
  name: import-worker
  namespace: spirit-in-physics
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: import-worker
---
apiVersion: v1
kind: Service
metadata:
  name: infra-temporal
  namespace: spirit-in-physics
spec:
  ports:
  - name: grpc
    port: 7233
    protocol: TCP
    targetPort: 7233
  - name: ui
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: temporal
---
apiVersion: v1
kind: Service
metadata:
  name: infra-timescaledb
  namespace: spirit-in-physics
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: timescaledb
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: spirit-in-physics
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: portal
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-ts
  namespace: spirit-in-physics
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: temporal-ts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-service
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grpc-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grpc-service
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgresql://postgres:postgres@infra-timescaledb:5432/spirit_in_physics
        - name: TEMPORAL_ADDRESS
          value: infra-temporal:7233
        - name: STORAGE_ENDPOINT
          value: storage.googleapis.com
        - name: STORAGE_BUCKET
          value: spirit-in-physics
        - name: STORAGE_USE_SSL
          value: "true"
        image: asia-northeast1-docker.pkg.dev/com-junkawasaki-sip/spirit-in-physics/grpc-service:latest
        imagePullPolicy: Always
        name: grpc-service
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: import-service
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: import-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: import-service
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgresql://postgres:postgres@infra-timescaledb:5432/spirit_in_physics
        - name: TEMPORAL_ADDRESS
          value: infra-temporal:7233
        image: asia-northeast1-docker.pkg.dev/com-junkawasaki-sip/spirit-in-physics/import-service:latest
        imagePullPolicy: Always
        name: import-service
        ports:
        - containerPort: 8082
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: import-worker
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: import-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: import-worker
    spec:
      containers:
      - command:
        - python
        - worker.py
        image: asia-northeast1-docker.pkg.dev/com-junkawasaki-sip/spirit-in-physics/import-service:latest
        imagePullPolicy: Always
        name: import-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-temporal
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      containers:
      - env:
        - name: DB
          value: postgres12
        - name: DB_PORT
          value: "5432"
        - name: POSTGRES_USER
          value: postgres
        - name: POSTGRES_PWD
          value: postgres
        - name: POSTGRES_SEEDS
          value: infra-timescaledb
        image: temporalio/auto-setup:latest
        imagePullPolicy: Always
        name: temporal
        ports:
        - containerPort: 7233
          name: grpc
        - containerPort: 8088
          name: ui
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal
    spec:
      containers:
      - env:
        - name: PUBLIC_CLERK_PUBLISHABLE_KEY
          valueFrom:
            secretKeyRef:
              key: PUBLIC_CLERK_PUBLISHABLE_KEY
              name: clerk-secrets
        - name: CLERK_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: CLERK_SECRET_KEY
              name: clerk-secrets
        - name: PUBLIC_API_URL
          value: https://sip.junkawasaki.com/api
        image: asia-northeast1-docker.pkg.dev/com-junkawasaki-sip/spirit-in-physics/svelte-app:latest
        imagePullPolicy: Always
        name: portal
        ports:
        - containerPort: 80
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ts
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: temporal-ts
  template:
    metadata:
      labels:
        app.kubernetes.io/name: temporal-ts
    spec:
      containers:
      - env:
        - name: TEMPORAL_ADDRESS
          value: infra-temporal:7233
        - name: TASK_QUEUE
          value: visualization-analysis-queue
        image: asia-northeast1-docker.pkg.dev/com-junkawasaki-sip/spirit-in-physics/temporal-ts:latest
        imagePullPolicy: Always
        name: temporal-ts
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: infra-timescaledb
  namespace: spirit-in-physics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timescaledb
  serviceName: infra-timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      containers:
      - args:
        - -c
        - max_connections=200
        image: timescale/timescaledb:latest-pg15
        name: timescaledb
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    networking.gke.io/static-ip: sip-static-ip
  name: infra-gateway
  namespace: spirit-in-physics
spec:
  gatewayClassName: envoy
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: sip.junkawasaki.com
    name: http-0
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: sip.junkawasaki.com
    name: https-0
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: sip-tls-cert
      mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra-https-redirect
  namespace: spirit-in-physics
spec:
  hostnames:
  - sip.junkawasaki.com
  parentRefs:
  - name: infra-gateway
    namespace: spirit-in-physics
    sectionName: http-0
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra-main-route
  namespace: spirit-in-physics
spec:
  hostnames:
  - sip.junkawasaki.com
  parentRefs:
  - name: infra-gateway
    namespace: spirit-in-physics
    sectionName: https-0
  rules:
  - backendRefs:
    - name: grpc-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api
  - backendRefs:
    - name: import-service
      port: 8082
    matches:
    - path:
        type: PathPrefix
        value: /import
  - backendRefs:
    - name: portal
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
